--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "clsx": "^1.2.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
@@ -29,6 +30,7 @@
     "react-hook-form": "^7.43.5",
     "react-redux": "^8.0.5",
     "sass": "^1.59.3",
+    "timeago.js": "^4.0.2",
     "typescript": "4.9.5",
     "yup": "^1.0.2"
   }
