--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.43.5",
     "react-redux": "^8.0.5",
     "sass": "^1.59.3",
+    "socket.io-client": "^4.6.1",
     "timeago.js": "^4.0.2",
     "typescript": "4.9.5",
     "yup": "^1.0.2"
