--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
     "react-hook-form": "^7.43.5",
     "react-redux": "^8.0.5",
     "sass": "^1.59.3",
